<resources>
    <string name="app_name">HealthFinder</string>
    <string name="getStarted">Get Started</string>
    <string name="emailHint">Enter Email</string>
    <string name="passwordHint">Enter Password</string>
    <string name="title_activity_main_app_screen">MainAppScreen</string>
    <string name="title_home">Profile</string>
    <string name="title_dashboard">Consultations</string>
    <string name="title_notifications">Request</string>
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="nameHint">Change Name</string>
    <string name="doctorRegistration">I\'m a Doctor</string>
    <string name="registrationTitle">Doctor Registration</string>
    <string name="reg">Reg No:</string>
    <string name="qual">Qualifications</string>
    <string name="clinic">Clinic:</string>
    <string name="title_activity_doc_input">DocInputActivity</string>
    <string name="register">Register</string>
    <string name="consultTitle">Consultation Form</string>
    <string name="doctorEmail">Doctor Email:</string>
    <string name="caseUrgent">Case is urgent:</string>
    <string name="details">Details</string>
    <string name="Submit">Submit</string>
    <string name="chats">No Active Chats</string>
    <string name="Welcome">Welcome to HealthFinder</string>
    <string name="specialties">Specialties</string>
    <string name="specialties_">Specialties:</string>
    <string name="currentConsultTitle">Current Consultation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
</resources>
